# fractals

./: Cargo.toml  cool-fractals.txt  flake.nix
src/: compute_shader.wgsl  main.rs
