[package]
name = "fractals"
version = "1.1.1"
edition = "2024"
authors = ["dmyTRUEk"]

[profile.release]
opt-level = 3
# lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
minifb = { version = "0.28.0", default-features = false, features = ["wayland"] }
num = "0.4.3"
rand = "0.9.1"
rayon = "1.10.0"
