[package]
name = "fractals"
version = "2.0.0"
edition = "2024"
authors = ["dmyTRUEk"]
homepage   = "https://github.com/dmyTRUEk/fractals"
repository = "https://github.com/dmyTRUEk/fractals"
description = """\
Render fractal from Id.

Controls:
Arrows, WASD, HJKL		camera movement
ZX, IO            		zoom in/out
R                 		reset camera and zoom
EQ                		inc/dec render quality
NP                		next/prev fractal by its Id
B                 		toggle `break_loop`
Y                 		toggle `assign_zesc_once`
Space             		toggle some keys repeat mode"""

[profile.release]
opt-level = 3
# lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
minifb = { version = "0.28.0", default-features = false, features = ["wayland"] }
num = "0.4.3"
rand = "0.9.1"
rayon = "1.10.0"
