[package]
name = "fractals"
version = "3.1.1"
edition = "2024"
authors = ["dmyTRUEk"]
homepage   = "https://github.com/dmyTRUEk/fractals"
repository = "https://github.com/dmyTRUEk/fractals"
description = """\
Render fractal from Id.

Controls:
Arrows, WASD, HJKL		camera movement
ZX, IO            		zoom in/out
R                 		reset camera and zoom
EQ                		inc/dec render quality
NP                		next/prev fractal by its Id
B                 		toggle `break_loop`
Y                 		toggle `assign_zesc_once`
G                 		toggle GPU usage
-=                		dec/inc `alpha` by `alpha_step`
90                		dec/inc `alpha_step` 1.1 times
Space             		toggle some keys repeat mode
V                 		toggle verbose output\
"""

[profile.release]
opt-level = 3
# lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
bytemuck = "1.22.0"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11"
minifb = { version = "0.28.0", default-features = false, features = ["wayland"] }
num = "0.4.3"
pollster = "0.4"
rand = "0.9.1"
rayon = "1.10.0"
wgpu = "25.0.0"
